--- a/shared/src/main/resources/languages/language.properties
+++ b/shared/src/main/resources/languages/language.properties
@@ -23,7 +23,7 @@ skinsrestorer.help_sr_reload=Reloads the configuration file.
 skinsrestorer.help_sr_status=Checks plugin needed API services.
 skinsrestorer.help_sr_drop=Removes players or skin data.
 skinsrestorer.help_sr_props=Displays the players current skin properties.
-skinsrestorer.help_sr_apply_skin=Re-apply the skin for target user.
+skinsrestorer.help_sr_apply_skin=Re-apply the skin for target player.
 skinsrestorer.help_sr_createcustom=Create a custom server wide skin.
 skinsrestorer.syntax_defaultcommand=<skin/url>
 skinsrestorer.syntax_skinset=<skin>
@@ -35,27 +35,34 @@ skinsrestorer.syntax_skinclear_other=<target>
 skinsrestorer.completions_skin=<Skin>
 skinsrestorer.completions_skinname=<SkinName>
 skinsrestorer.completions_skinurl=<SkinUrl>
+skinsrestorer.success_skin_change={prefix} &2Your skin has been changed.
+skinsrestorer.success_skin_change_other={prefix} &2You set {0}'s skin.
+skinsrestorer.success_skin_clear={prefix} &2Your skin has been cleared.
+skinsrestorer.success_skin_clear_other={prefix} &2Skin cleared for player {0}.
+skinsrestorer.success_updating_skin={prefix} &2Your skin has been updated.
+skinsrestorer.success_updating_skin_other={prefix} &2Skin updated for player {0}.
+skinsrestorer.succes_admin_applyskin={prefix} &2Player skin has been refreshed!
+skinsrestorer.success_admin_createcustom={prefix} &2Skin {0} has been created!
+skinsrestorer.success_admin_drop={prefix} &2{0} data dropped for {1}.
+skinsrestorer.success_admin_reload={prefix} &2Config and Locale has been reloaded!
 skinsrestorer.command_server_not_allowed_message={prefix} &4Error&8: &cCommands have been disabled for the server {0}.
 skinsrestorer.player_has_no_permission_skin={prefix} &4Error&8: &cYou don't have permission to set this skin.
 skinsrestorer.player_has_no_permission_url={prefix} &4Error&8: &cYou don't have permission to set skins by URL.
-skinsrestorer.skin_disabled={prefix} &4Error&8: &cThis skin is disabled by an administrator.
-skinsrestorer.skinurl_disallowed={prefix} &4Error&8: &cThis domain has not been allowed by the administrator.
+skinsrestorer.error_skin_disabled={prefix} &4Error&8: &cThis skin is disabled by an administrator.
+skinsrestorer.error_skinurl_disallowed={prefix} &4Error&8: &cThis domain has not been allowed by the administrator.
 skinsrestorer.not_premium={prefix} &4Error&8: &cPremium player with that name does not exist.
+skinsrestorer.only_allowed_on_console={prefix} &4Error&8: &cOnly console may execute this command!
 skinsrestorer.invalid_player={prefix} &4Error&8: &c{0} is not a valid username or URL.
 skinsrestorer.skin_cooldown={prefix} &4Error&8: &cYou can change your skin again in &e{0} &cseconds.
-skinsrestorer.skin_change_success={prefix} &2Your skin has been changed.
-skinsrestorer.skin_clear_success={prefix} &2Your skin has been cleared.
-skinsrestorer.skin_clear_issuer={prefix} &2Skin cleared for player {0}.
 skinsrestorer.ms_updating_skin={prefix} &2Uploading skin, please wait...(This may take up some time)
-skinsrestorer.success_create_skin={prefix} &2Skin {0} has been created!
-skinsrestorer.success_updating_skin={prefix} &2Your skin has been updated.
-skinsrestorer.success_updating_skin_other={prefix} &2Skin updated for player {0}.
 skinsrestorer.error_updating_skin={prefix} &4Error&8: &cAn error occurred while updating your skin. Please try again later!
 skinsrestorer.error_updating_url={prefix} &4Error&8: &cYou can't update custom url skins! \n&cRequest again using /skin url
 skinsrestorer.error_updating_customskin={prefix} &4Error&8: &cSkin can't be updated because its custom.
 skinsrestorer.error_invalid_urlskin={prefix} &4Error&8: &cInvalid skin url or format, \n&cTry uploading your skin to imgur and right click 'copy image address' \n&cFor guide see: &c&oskinsrestorer.net/skinurl
+skinsrestorer.error_admin_applyskin={prefix} &4ERROR&8: &cplayer skin could NOT be refreshed!
 skinsrestorer.error_ms_full={prefix} &4MS Error&8: &cAPI timed out while uploading your &cskin. Please try again later. (MineSkin)
 skinsrestorer.error_ms_generic={prefix} &4MS Error&8: {0}
+skinsrestorer.error_ms_api_failed={prefix} &4Error&8: &cMineSkin API is overloaded, please try again later!
 skinsrestorer.generic_error={prefix} &4Error&8: &cAn error occurred while requesting skin data, please try again later!
 skinsrestorer.wait_a_minute={prefix} &4Error&8: &cPlease wait a minute before requesting that skin again. (Rate Limited)
 skinsrestorer.error_no_skin={prefix} &4Error&8: &cThis player has no skin set.
@@ -66,15 +73,9 @@ skinsrestorer.skinsmenu_previous_page=&e&l«&7 Previous Page&e&l «
 skinsrestorer.skinsmenu_clear_skin=&c&l[ &7Remove Skin&c&l ]
 skinsrestorer.skinsmenu_select_skin=&2Click to select this skin
 skinsrestorer.skin_search_message={prefix} &2You can find skins matching &a{0}&2 here: \n&ahttps://namemc.com/minecraft-skins/tag/{0} \n\n&2If no skins are found, you can always find some skins at https://namemc.com/minecraft-skins/tag \nYou can set the skin using the skin link:\n /skin https://namemc.com/skin/
-skinsrestorer.admin_set_skin={prefix} &2You set {0}'s skin.
-skinsrestorer.data_dropped={prefix} &2{0} data dropped for {1}.
-skinsrestorer.admin_applyskin_succes={prefix} &2Player skin has been refreshed!
-skinsrestorer.admin_applyskin_error={prefix} &4ERROR&8: &cplayer skin could NOT be refreshed!
 skinsrestorer.status_ok={prefix} &2Mojang API connection successful!
 skinsrestorer.alt_api_failed={prefix} &4Error&8: &cSkin Data API is overloaded, please try again later!
-skinsrestorer.ms_api_failed={prefix} &4Error&8: &cMineSkin API is overloaded, please try again later!
 skinsrestorer.no_skin_data={prefix} &4Error&8: &cNo skin data acquired! Does this player have a skin?
-skinsrestorer.reload={prefix} &2Config and Locale has been reloaded!
 skinsrestorer.outdated={prefix} &4You are running an outdated version of SkinsRestorer!\n&cPlease update to the latest version on Spigot: \n&ehttps://www.spigotmc.org/resources/skinsrestorer.2124/
 skinsrestorer.sr_line=&7&m----------------------------------------
 skinsrestorer.custom_help_if_enabled=  &2&lSkinsRestorer &7- &f&lv{0} \
