--- a/shared/src/main/resources/languages/language_fr.properties
+++ b/shared/src/main/resources/languages/language_fr.properties
@@ -9,6 +9,7 @@
 # For Advanced help go to our Discord -> https://skinsrestorer.net/discord
 # Want to help translate the plugin?  -> https://translate.skinsrestorer.net/
 # Is this file empty below? That means the language was not yet translated.
+skinsrestorer.prefix=&e[&2SkinsRestorer&e]
 skinsrestorer.help_help_command=[aide]
 skinsrestorer.help_skin_set=Modifie votre skin.
 skinsrestorer.help_skin_set_other=Définit le skin d'un joueur cible.
@@ -37,16 +38,16 @@ skinsrestorer.completions_skinurl=<SkinUrl>
 skinsrestorer.command_server_not_allowed_message={préfixe} &4Erreur&8: &cLes commandes ont été désactivées pour le serveur {0}.
 skinsrestorer.player_has_no_permission_skin={prefix} &4Erreur&8: &cVous n'avez pas la permission de définir ce skin.
 skinsrestorer.player_has_no_permission_url={prefix} &4Erreur&8: &cVous n'avez pas la permission de définir des skins par URL.
-skinsrestorer.skin_disabled={prefix} &4Erreur&8: &cCe skin est désactivé par un administrateur.
-skinsrestorer.skinurl_disallowed={prefix} &4Erreur&8: &cCe domaine n'a pas été autorisé par l'administrateur.
+skinsrestorer.error_skin_disabled={prefix} &4Erreur&8: &cCe skin est désactivé par un administrateur.
+skinsrestorer.error_skinurl_disallowed={prefix} &4Erreur&8: &cCe domaine n'a pas été autorisé par l'administrateur.
 skinsrestorer.not_premium={prefix} &4Erreur&8: &cLe joueur Premium avec ce nom n'existe pas.
 skinsrestorer.invalid_player={prefix} &4Erreur&8: &c{0} n'est pas un nom d'utilisateur ou une URL valide.
 skinsrestorer.skin_cooldown={prefix} &4Erreur&8: &cVous pouvez changer votre skin à nouveau dans &e{0} &csecondes.
-skinsrestorer.skin_change_success={prefix} &2Votre skin a été changé.
-skinsrestorer.skin_clear_success={prefix} &2Votre skin a été effacé.
-skinsrestorer.skin_clear_issuer={prefix} &2Skin effacé pour le joueur {0}.
+skinsrestorer.success_skin_change={prefix} &2Votre skin a été changé.
+skinsrestorer.success_skin_clear={prefix} &2Votre skin a été effacé.
+skinsrestorer.success_skin_clear_other={prefix} &2Skin effacé pour le joueur {0}.
 skinsrestorer.ms_updating_skin={prefix} &2Téléversement du skin, veuillez patienter...(Cela peut prendre un certain temps)
-skinsrestorer.success_create_skin={prefix} &2Skin {0} a été créé !
+skinsrestorer.success_admin_createcustom={prefix} &2Skin {0} a été créé !
 skinsrestorer.success_updating_skin={prefix} &2Votre skin a été mis à jour.
 skinsrestorer.success_updating_skin_other={prefix} &2Skin mis à jour pour le joueur {0}.
 skinsrestorer.error_updating_skin={prefix} &4Erreur&8: &cUne erreur s'est produite lors de la mise à jour de votre skin. Veuillez réessayer plus tard !
@@ -65,14 +66,14 @@ skinsrestorer.skinsmenu_previous_page=&e&l«&7 Page Précédente&e&l «
 skinsrestorer.skinsmenu_clear_skin=&c&l[ &7Retirer le skin&c&l ]
 skinsrestorer.skinsmenu_select_skin=&2Cliquez pour sélectionner ce skin
 skinsrestorer.skin_search_message={prefix} &2Vous pouvez trouver des skins correspondant &a{0}&2 ici: \n&ahttps://namemc. om/minecraft-skins/tag/{0} \n\n&2Si aucun skin n'est trouvé, vous pouvez toujours trouver des skins sur https://namemc.com/minecraft-skins/tag \nVous pouvez définir le skin en utilisant le lien skin :\n /skin https://namemc.com/skin/
-skinsrestorer.admin_set_skin={prefix} &2Vous avez défini le skin de {0}.
-skinsrestorer.data_dropped={prefix} &2{0} données supprimées pour {1}.
-skinsrestorer.admin_applyskin_succes={prefix} &2Le skin a été actualisé !
-skinsrestorer.admin_applyskin_error={prefix} &4ERREUR &8: &cLe skin n'a PAS pu être actualisée !
+skinsrestorer.success_skin_change_other={prefix} &2Vous avez défini le skin de {0}.
+skinsrestorer.success_admin_drop={prefix} &2{0} données supprimées pour {1}.
+skinsrestorer.succes_admin_applyskin={prefix} &2Le skin a été actualisé !
+skinsrestorer.error_admin_applyskin={prefix} &4ERREUR &8: &cLe skin n'a PAS pu être actualisée !
 skinsrestorer.status_ok={prefix} &2Connexion API Mojang réussie!
 skinsrestorer.alt_api_failed={prefix} &4Erreur&8: &cL'API de données du skin est surchargée, veuillez réessayer plus tard !
-skinsrestorer.ms_api_failed={prefix} &4Erreur&8: &cL'API MineSkin est surchargée, veuillez réessayer plus tard !
+skinsrestorer.error_ms_api_failed={prefix} &4Erreur&8: &cL'API MineSkin est surchargée, veuillez réessayer plus tard !
 skinsrestorer.no_skin_data={prefix} &4Erreur&8: &cAucune donnée de skin acquise ! Est-ce que ce joueur a un skin ?
-skinsrestorer.reload={prefix} &2La configuration et la locale ont été rechargées!
+skinsrestorer.success_admin_reload={prefix} &2La configuration et la locale ont été rechargées!
 skinsrestorer.outdated={prefix} &4Vous utilisez une version obsolète de SkinsRestorer!\n&cVeuillez mettre à jour vers la dernière version sur Spigot: \n&ehttps://www.spigotmc.org/resources/skinsrestorer.2124/
 
