--- a/shared/src/main/resources/languages/language_ru.properties
+++ b/shared/src/main/resources/languages/language_ru.properties
@@ -9,6 +9,7 @@
 # For Advanced help go to our Discord -> https://skinsrestorer.net/discord
 # Want to help translate the plugin?  -> https://translate.skinsrestorer.net/
 # Is this file empty below? That means the language was not yet translated.
+skinsrestorer.prefix=&e[&2SkinsRestorer&e]
 skinsrestorer.help_help_command=[помощь]
 skinsrestorer.help_skin_set=Изменяет ваш скин.
 skinsrestorer.help_skin_set_other=Устанавливает скин выбранному игроку.
@@ -27,16 +28,16 @@ skinsrestorer.help_sr_createcustom=Создаёт пользовательски
 skinsrestorer.command_server_not_allowed_message={prefix} &4Ошибка&8: &cКоманды отключены для сервера {0}.
 skinsrestorer.player_has_no_permission_skin={prefix} &4Ошибка&8: &cУ вас нет разрешения на установку этого скина.
 skinsrestorer.player_has_no_permission_url={prefix} &4Ошибка&8: &cУ вас недостаточно прав для установки скинов по URL.
-skinsrestorer.skin_disabled={prefix} &4Ошибка&8: &cЭтот скин отключён администратором.
-skinsrestorer.skinurl_disallowed={prefix} &4Ошибка&8: &cЭтот домен не разрешён администратором.
+skinsrestorer.error_skin_disabled={prefix} &4Ошибка&8: &cЭтот скин отключён администратором.
+skinsrestorer.error_skinurl_disallowed={prefix} &4Ошибка&8: &cЭтот домен не разрешён администратором.
 skinsrestorer.not_premium={prefix} &4Ошибка&8: &cПремиум игрока с таким именем не существует.
 skinsrestorer.invalid_player={prefix} &4Ошибка: &8: &c{0} не является допустимым именем пользователя или URL-адресом.
 skinsrestorer.skin_cooldown={prefix} &4Ошибка&8: &cВы сможете снова изменить скин через &e{0} &cсек.
-skinsrestorer.skin_change_success={prefix} &2Ваш скин изменён.
-skinsrestorer.skin_clear_success={prefix} &2Ваш скин был сброшен.
-skinsrestorer.skin_clear_issuer={prefix} &2Скин очищен для игрока {0}.
+skinsrestorer.success_skin_change={prefix} &2Ваш скин изменён.
+skinsrestorer.success_skin_clear={prefix} &2Ваш скин был сброшен.
+skinsrestorer.success_skin_clear_other={prefix} &2Скин очищен для игрока {0}.
 skinsrestorer.ms_updating_skin={prefix} &2Загрузка скина, пожалуйста подождите...(Это может занять некоторое время)
-skinsrestorer.success_create_skin={prefix} &2Скин {0} был создан!
+skinsrestorer.success_admin_createcustom={prefix} &2Скин {0} был создан!
 skinsrestorer.success_updating_skin={prefix} &2Ваш скин был обновлён.
 skinsrestorer.success_updating_skin_other={prefix} &2Скин обновлён для игрока {0}.
 skinsrestorer.error_updating_skin={prefix} &4Ошибка&8: &cПроизошла ошибка при обновлении скина. Пожалуйста, попробуйте позже!
@@ -55,14 +56,14 @@ skinsrestorer.skinsmenu_previous_page=&e&l«&7 Предыдущая страни
 skinsrestorer.skinsmenu_clear_skin=&c&l[ &7 Удалить скин&c&l ]
 skinsrestorer.skinsmenu_select_skin=&2Нажмите, чтобы выбрать этот скин
 skinsrestorer.skin_search_message={prefix} &2Вы можете найти скины по запросу &a{0}&2 здесь: \n&ahttps://namemc.com/minecraft-skins/tag/{0} \n\n&2Если скинов не найдено, вы всегда можете найти некоторые скины по адресу https://namemc.com/minecraft-skins/tag \nВы можете установить скин по ссылке скина:\n /skin https://namemc.com/skin/
-skinsrestorer.admin_set_skin={prefix} &2Вы установили скин {0}.
-skinsrestorer.data_dropped={prefix} &2{0} данные сброшены для {1}.
-skinsrestorer.admin_applyskin_succes={prefix} &2Скин игрока был обновлён!
-skinsrestorer.admin_applyskin_error={prefix} &4ОШИБКА&8: &cскин игрока НЕ может быть обновлен!
+skinsrestorer.success_skin_change_other={prefix} &2Вы установили скин {0}.
+skinsrestorer.success_admin_drop={prefix} &2{0} данные сброшены для {1}.
+skinsrestorer.succes_admin_applyskin={prefix} &2Скин игрока был обновлён!
+skinsrestorer.error_admin_applyskin={prefix} &4ОШИБКА&8: &cскин игрока НЕ может быть обновлен!
 skinsrestorer.status_ok={prefix} &2Соединение с API Mojang успешно установлено!
 skinsrestorer.alt_api_failed={prefix} &4Ошибка&8: &cAPI скинов перегружено. Пожалуйста, попробуйте позже!
-skinsrestorer.ms_api_failed={prefix} &4Ошибка&8: &cAPI скинов перегружено. Пожалуйста, попробуйте позже!
+skinsrestorer.error_ms_api_failed={prefix} &4Ошибка&8: &cAPI скинов перегружено. Пожалуйста, попробуйте позже!
 skinsrestorer.no_skin_data={prefix} &4Ошибка&8: &cДанные о скине не получены! У этого игрока есть скин?
-skinsrestorer.reload={prefix} &2Конфиг и локализация были перезагружены!
+skinsrestorer.success_admin_reload={prefix} &2Конфиг и локализация были перезагружены!
 skinsrestorer.outdated={prefix} &4Вы используете устаревшую версию SkinsRestorer!\n&cПожалуйста, обновитесь до последней версии на Spigot: \n&ehttps://www.spigotmc.org/resources/skinsrestorer.2124/
 
