--- a/shared/src/main/resources/languages/language_tr.properties
+++ b/shared/src/main/resources/languages/language_tr.properties
@@ -9,6 +9,7 @@
 # For Advanced help go to our Discord -> https://skinsrestorer.net/discord
 # Want to help translate the plugin?  -> https://translate.skinsrestorer.net/
 # Is this file empty below? That means the language was not yet translated.
+skinsrestorer.prefix=&e[&2SkinsRestorer&e]
 skinsrestorer.prefix=&e[&6BambuCraft&e]
 skinsrestorer.help_help_command= [yardım]
 skinsrestorer.help_skin_set=Görünüm değiştir.
@@ -38,16 +39,16 @@ skinsrestorer.completions_skinurl=<görünümUrl>
 skinsrestorer.command_server_not_allowed_message={prefix} &4Hata&8: &cKomut sunucuda yasaklandı. {0}.
 skinsrestorer.player_has_no_permission_skin={prefix} &4Hata&8: &cGörünüm değiştirmek için iznin yok.
 skinsrestorer.player_has_no_permission_url={prefix} &4Hata&8: &cGörünüm değiştirmek için iznin yok URL aracılığıyla.
-skinsrestorer.skin_disabled={prefix} &4Hata&8: &cBu görünüm yönetici tarafından engellendi.
-skinsrestorer.skinurl_disallowed={prefix} &4Hata&8: &cBu alana yönetici tarafından izin verilmedi.
+skinsrestorer.error_skin_disabled={prefix} &4Hata&8: &cBu görünüm yönetici tarafından engellendi.
+skinsrestorer.error_skinurl_disallowed={prefix} &4Hata&8: &cBu alana yönetici tarafından izin verilmedi.
 skinsrestorer.not_premium={prefix} &4Hata&8: &cPremium oyuncu bu isimle bulunamadı.
 skinsrestorer.invalid_player={prefix} &4Hata&8: &c{0} bulunamadı isimle ya da URL ile.
 skinsrestorer.skin_cooldown={prefix} &4Hata&8: &cTekrar görünümünü &e{0} &csaniye sonra değiştirebilirsin.
-skinsrestorer.skin_change_success={prefix} &2Görünümün değişti.
-skinsrestorer.skin_clear_success={prefix} &2Görünümün temizlendi.
-skinsrestorer.skin_clear_issuer={prefix} &2Oyuncunun görünümü temizlendi {0}.
+skinsrestorer.success_skin_change={prefix} &2Görünümün değişti.
+skinsrestorer.success_skin_clear={prefix} &2Görünümün temizlendi.
+skinsrestorer.success_skin_clear_other={prefix} &2Oyuncunun görünümü temizlendi {0}.
 skinsrestorer.ms_updating_skin={prefix} &2Görünüm yükleniyor, lütfen bekle...(Biraz vakit alabilir)
-skinsrestorer.success_create_skin={prefix} &2Görünüm {0} yaratıldı!
+skinsrestorer.success_admin_createcustom={prefix} &2Görünüm {0} yaratıldı!
 skinsrestorer.success_updating_skin={prefix} &2Görünümün güncellendi.
 skinsrestorer.success_updating_skin_other={prefix} &2Oyuncunun görünümü güncellendi. {0}.
 skinsrestorer.error_updating_skin={prefix} &4Hata&8: &cGörünümün güncellenirken hata oldu, tekrar dene!
@@ -66,15 +67,15 @@ skinsrestorer.skinsmenu_previous_page=&e&l«&7 Önceki Sayfa&e&l «
 skinsrestorer.skinsmenu_clear_skin=&c&l[ &7Görünümü Kaldır&c&l ]
 skinsrestorer.skinsmenu_select_skin=&2Buraya tıklayarak görünümü ayarla.
 skinsrestorer.skin_search_message={prefix} &2Eşlesen görünümleri bulabilirsin &a{0}&2 buradan: \n&ahttps://namemc.com/minecraft-skins/tag/{0} \n\n&2If no skins are found, you can always find some skins at https://namemc.com/minecraft-skins/tag \nYou can set the skin using the skin link:\n /skin https://namemc.com/skin/
-skinsrestorer.admin_set_skin={prefix} &2Ayarladın {0}'in görünümünü.
-skinsrestorer.data_dropped={prefix} &2{0} data bozuldu {1}.
-skinsrestorer.admin_applyskin_succes={prefix} &2Oyuncu görünümü yenilendi!
-skinsrestorer.admin_applyskin_error={prefix} &4Hata&8: &coyuncu görünümü yenilenemedi!
+skinsrestorer.success_skin_change_other={prefix} &2Ayarladın {0}'in görünümünü.
+skinsrestorer.success_admin_drop={prefix} &2{0} data bozuldu {1}.
+skinsrestorer.succes_admin_applyskin={prefix} &2Oyuncu görünümü yenilendi!
+skinsrestorer.error_admin_applyskin={prefix} &4Hata&8: &coyuncu görünümü yenilenemedi!
 skinsrestorer.status_ok={prefix} &2Mojang API bağlantısı başarılı!
 skinsrestorer.alt_api_failed={prefix} &4Hata&8: &cSkin Data API aşırı yüklendi, sonra tekrar dene!
-skinsrestorer.ms_api_failed={prefix} &4Hata&8: &cMineSkin API aşırı yüklendi, sonra tekrar dene!
+skinsrestorer.error_ms_api_failed={prefix} &4Hata&8: &cMineSkin API aşırı yüklendi, sonra tekrar dene!
 skinsrestorer.no_skin_data={prefix} &4Hata&8: &cOyuncu görünümü yok! Bu oyuncunun görünümü var mı?
-skinsrestorer.reload={prefix} &2Konfigürasyon ve dosyalar başarıyla yenilendi!
+skinsrestorer.success_admin_reload={prefix} &2Konfigürasyon ve dosyalar başarıyla yenilendi!
 skinsrestorer.outdated={prefix} &4Eski bir SkinRestorer versiyonu kullanıyorsun!\n&cPlease update to the latest version on Spigot: \n&ehttps://www.spigotmc.org/resources/skinsrestorer.2124/
 skinsrestorer.sr_line=&7&m----------------------------------------
 skinsrestorer.custom_help_if_enabled=  &2&lSkinsRestorer &7- &f&lv{0} \n    &2/skin <skinname> &7-&f Görünümünü değiştirir. \n    &2/skin update &7-&f Görünümünü günceller. \n    &2/skin clear &7-&f Görünümünü temizler.
