--- a/shared/src/main/resources/languages/language_es_AR.properties
+++ b/shared/src/main/resources/languages/language_es_AR.properties
@@ -9,6 +9,7 @@
 # For Advanced help go to our Discord -> https://skinsrestorer.net/discord
 # Want to help translate the plugin?  -> https://translate.skinsrestorer.net/
 # Is this file empty below? That means the language was not yet translated.
+skinsrestorer.prefix=&e[&2SkinsRestorer&e]
 skinsrestorer.help_skin_set=Cambia tu skin.
 skinsrestorer.help_skin_set_other=Establece la skin para un jugador específico.
 skinsrestorer.help_skin_set_other_url=Establece la skin mediante URL para un jugador específico.
@@ -36,16 +37,16 @@ skinsrestorer.completions_skinurl=<UrlSkin>
 skinsrestorer.command_server_not_allowed_message={prefix} &4Error&8: &cEl comando han sido deshabilitado para el servidor {0}.
 skinsrestorer.player_has_no_permission_skin={prefix} &4Error&8: &cNo tienes permisos para establecerte esta skin.
 skinsrestorer.player_has_no_permission_url={prefix} &4Error&8: &cNo tienes permisos para establecerte una skin por URL.
-skinsrestorer.skin_disabled={prefix} &4Error&8: &cEsta skin está deshabilitado por un administrador.
-skinsrestorer.skinurl_disallowed={prefix} &4Error&8: &cEsta URL no está admitida por los administradores.
+skinsrestorer.error_skin_disabled={prefix} &4Error&8: &cEsta skin está deshabilitado por un administrador.
+skinsrestorer.error_skinurl_disallowed={prefix} &4Error&8: &cEsta URL no está admitida por los administradores.
 skinsrestorer.not_premium={prefix} &4Error&8: &cNo existe un jugador premium con ese nombre.
 skinsrestorer.invalid_player={prefix} &4Error&8: &c{0} no es una URL válida.
 skinsrestorer.skin_cooldown={prefix} &4Error&8: &cTe podrás cambiar la skin nuevamente en &e{0} &csegundos.
-skinsrestorer.skin_change_success={prefix} &2Tu skin a cambiado.
-skinsrestorer.skin_clear_success={prefix} &2Tu Skin fue eliminada.
-skinsrestorer.skin_clear_issuer={prefix} &2La skin de {0} a sido eliminado.
+skinsrestorer.success_skin_change={prefix} &2Tu skin a cambiado.
+skinsrestorer.success_skin_clear={prefix} &2Tu Skin fue eliminada.
+skinsrestorer.success_skin_clear_other={prefix} &2La skin de {0} a sido eliminado.
 skinsrestorer.ms_updating_skin={prefix} &2Subiendo su skin, espere por favor (Esto puede tomar un tiempo)
-skinsrestorer.success_create_skin={prefix} &2¡La skin {0} a sido creada!
+skinsrestorer.success_admin_createcustom={prefix} &2¡La skin {0} a sido creada!
 skinsrestorer.success_updating_skin={prefix} &2Tu skin ha sido actualizada.
 skinsrestorer.success_updating_skin_other={prefix} &2La skin de {0} ha sido actualizada.
 skinsrestorer.error_updating_skin={prefix} &4Error&8: &cUn error ha ocurrido mientras actualizabas tu skin. ¡Inténtalo nuevamente más tarde!
@@ -64,15 +65,15 @@ skinsrestorer.skinsmenu_previous_page=&e&l»&7 Anterior pagina&e&l »
 skinsrestorer.skinsmenu_clear_skin=&c&l[ &7Eliminar Skin&c&l ]
 skinsrestorer.skinsmenu_select_skin=&2Clic para seleccionar esta skin.
 skinsrestorer.skin_search_message={prefix} &2Puede encontrar skins que coincidan con &a{0}&2 aquí: \n&ahttps://namemc.com/minecraft-skins/tag/{0} \n\n&2Si no se encuentran skins, siempre puede encontrar algunas skins en https://namemc.com/minecraft-skins/tag \nPuede configurar la skin usando el enlace de la skin:\n /skin https://namemc.com/skin/
-skinsrestorer.admin_set_skin={prefix} &2Te estableciste la skin dé {0}.
-skinsrestorer.data_dropped={prefix} &2{0} datos descartados para {1}.
-skinsrestorer.admin_applyskin_succes={prefix} &2¡La skin ha sido recargada!
-skinsrestorer.admin_applyskin_error={prefix} &4ERROR&8: &c¡La skin del jugador NO se pudo actualizar!
+skinsrestorer.success_skin_change_other={prefix} &2Te estableciste la skin dé {0}.
+skinsrestorer.success_admin_drop={prefix} &2{0} datos descartados para {1}.
+skinsrestorer.succes_admin_applyskin={prefix} &2¡La skin ha sido recargada!
+skinsrestorer.error_admin_applyskin={prefix} &4ERROR&8: &c¡La skin del jugador NO se pudo actualizar!
 skinsrestorer.status_ok={prefix} &2Conexion exitosa a la API de Mojang!
 skinsrestorer.alt_api_failed={prefix} &4Error&8: &cLa API de datos de skin está sobrecargada, ¡inténtalo de nuevo más tarde!
-skinsrestorer.ms_api_failed={prefix} &4Error&8: &cLa API de MineSkin está sobrecargada, ¡inténtalo de nuevo más tarde!
+skinsrestorer.error_ms_api_failed={prefix} &4Error&8: &cLa API de MineSkin está sobrecargada, ¡inténtalo de nuevo más tarde!
 skinsrestorer.no_skin_data={prefix} &4Error&8: &c¡No se han adquirido datos de skin! ¿Este jugador tiene una skin?
-skinsrestorer.reload={prefix} &2¡La configuración y el idioma se han vuelto a cargar!
+skinsrestorer.success_admin_reload={prefix} &2¡La configuración y el idioma se han vuelto a cargar!
 skinsrestorer.outdated={prefix} &4Estas usando una versión vieja de SkinsRestorer!\n&cPuede actualizarlo mediante el siguiente link: \n&ehttps://www.spigotmc.org/resources/skinsrestorer.2124/
 skinsrestorer.custom_help_if_enabled=  &2&lSkinsRestorer &7- &f&lv{0} \n    &2/skin <NombreSkin> &7-&f Cambia tu skin. \n    &2/skin update &7-&f Actualiza tu skin. \n    &2/skin clear &7-&f Borra tu skin.
 
