--- a/shared/src/main/resources/languages/language_pl.properties
+++ b/shared/src/main/resources/languages/language_pl.properties
@@ -9,6 +9,7 @@
 # For Advanced help go to our Discord -> https://skinsrestorer.net/discord
 # Want to help translate the plugin?  -> https://translate.skinsrestorer.net/
 # Is this file empty below? That means the language was not yet translated.
+skinsrestorer.prefix=&e[&2SkinsRestorer&e]
 skinsrestorer.help_help_command=[pomoc]
 skinsrestorer.help_skin_set=Zmienia twojego skina.
 skinsrestorer.help_skin_set_other=Ustawia skina dla wybranego gracza.
@@ -32,16 +33,16 @@ skinsrestorer.completions_skinurl=<url skina>
 skinsrestorer.command_server_not_allowed_message={prefix} &4Błąd&8: &cKomendy zostały wyłączone dla serwera {0}.
 skinsrestorer.player_has_no_permission_skin={prefix} &4Błąd&8: &cNie posiadasz uprawnień do ustawienia tego skina.
 skinsrestorer.player_has_no_permission_url={prefix} &4Błąd&8: &cNie posiadasz uprawnień do ustawiania skinów przez adres URL.
-skinsrestorer.skin_disabled={prefix} &4Błąd: &cTen skin został zablokowany przez administratora.
-skinsrestorer.skinurl_disallowed={prefix} &4Błąd&8: &cTa domena nie została dozwolona przez administratora.
+skinsrestorer.error_skin_disabled={prefix} &4Błąd: &cTen skin został zablokowany przez administratora.
+skinsrestorer.error_skinurl_disallowed={prefix} &4Błąd&8: &cTa domena nie została dozwolona przez administratora.
 skinsrestorer.not_premium={prefix} &4Błąd&8: &cGracz premium z takim nickiem nie istnieje.
 skinsrestorer.invalid_player={prefix} &4Błąd&8: &c{0} nie jest prawidłową nazwą użytkownika ani adresem URL.
 skinsrestorer.skin_cooldown={prefix} &4Błąd&8: &cMożesz zmienić twojego skina ponownie za &e{0} &csekund.
-skinsrestorer.skin_change_success={prefix} &2Twój skin został zmieniony.
-skinsrestorer.skin_clear_success={prefix} &2Twój skin został usunięty.
-skinsrestorer.skin_clear_issuer={prefix} &2Skin wyczyszczona dla gracza {0}.
+skinsrestorer.success_skin_change={prefix} &2Twój skin został zmieniony.
+skinsrestorer.success_skin_clear={prefix} &2Twój skin został usunięty.
+skinsrestorer.success_skin_clear_other={prefix} &2Skin wyczyszczona dla gracza {0}.
 skinsrestorer.ms_updating_skin={prefix} &2Przesyłanie skina, proszę czekać...(To może zająć trochę czasu)
-skinsrestorer.success_create_skin={prefix} &2Skin {0} został utworzony!
+skinsrestorer.success_admin_createcustom={prefix} &2Skin {0} został utworzony!
 skinsrestorer.success_updating_skin={prefix} &2Twój skin został zaktualizowany.
 skinsrestorer.success_updating_skin_other={prefix} &2Skin został zaktualizowany dla gracza {0}.
 skinsrestorer.error_updating_skin={prefix} &4Błąd&8: &cWystąpił błąd podczas aktualizacji twojego skina. Spróbuj ponownie później!
@@ -60,15 +61,15 @@ skinsrestorer.skinsmenu_previous_page=&e&l«&7 Poprzednia Strona&e&l «
 skinsrestorer.skinsmenu_clear_skin=&c&l[ &7Usuń Skina&c&l ]
 skinsrestorer.skinsmenu_select_skin=&2Kliknij aby wybrać tego skina
 skinsrestorer.skin_search_message={prefix} &2Możesz znaleźć skiny pasujące &a{0}&2 tutaj: \n&ahttps://namemc.com/minecraft-skins/tag/{0} \n\n&2Jeśli nie znaleziono skinów, zawsze znajdziesz kilka skinów na https://namemc.com/minecraft-skins/tag \nMożesz ustawić skórkę za pomocą linku skórki:\n /skin https://namemc.com/skin/
-skinsrestorer.admin_set_skin={prefix} &2Ustawiłeś skina {0}.
-skinsrestorer.data_dropped={prefix} &2{0} dane zostały usunięte dla {1}.
-skinsrestorer.admin_applyskin_succes={prefix} &2Skin gracza został odświeżony!
-skinsrestorer.admin_applyskin_error={prefix} &4BŁĄD&8: &cSkin gracza NIE mógł zostać odświeżony!
+skinsrestorer.success_skin_change_other={prefix} &2Ustawiłeś skina {0}.
+skinsrestorer.success_admin_drop={prefix} &2{0} dane zostały usunięte dla {1}.
+skinsrestorer.succes_admin_applyskin={prefix} &2Skin gracza został odświeżony!
+skinsrestorer.error_admin_applyskin={prefix} &4BŁĄD&8: &cSkin gracza NIE mógł zostać odświeżony!
 skinsrestorer.status_ok={prefix} &2Uzyskano połączenie z API Mojang!
 skinsrestorer.alt_api_failed={prefix} &4Błąd&8: &cAPI Danych Skinów jest przeciążone, spróbuj ponownie później!
-skinsrestorer.ms_api_failed={prefix} &4Błąd&8: &cAPI MineSkin jest przeciążone, spróbuj ponownie później!
+skinsrestorer.error_ms_api_failed={prefix} &4Błąd&8: &cAPI MineSkin jest przeciążone, spróbuj ponownie później!
 skinsrestorer.no_skin_data={prefix} &4Błąd&8: &cNie uzyskano żadnych danych skina! Czy ten gracz posiada skina?
-skinsrestorer.reload={prefix} &2Pliki konfiguracyjne i językowe zostały ponownie załadowane!
+skinsrestorer.success_admin_reload={prefix} &2Pliki konfiguracyjne i językowe zostały ponownie załadowane!
 skinsrestorer.outdated={prefix} &4Korzystasz z przestarzałej wersji SkinsRestorer!\n&cZaktualizuj do najnowszej wersji na Spigot: \n&ehttps://www.spigotmc.org/resources/skinsrestorer.2124/
 skinsrestorer.custom_help_if_enabled=  &2&lSkinsRestorer &7- &f&lv{0} \n    &2/skin <nazwa skina> &7-&f Zmienia twój skin. \n    &2/skin update &7-&f Aktualizuje skina. \n    &2/skin clear &7-&f Czyści skina.
 
