--- a/shared/src/main/resources/languages/language_zh_hk.properties
+++ b/shared/src/main/resources/languages/language_zh_hk.properties
@@ -9,6 +9,7 @@
 # For Advanced help go to our Discord -> https://skinsrestorer.net/discord
 # Want to help translate the plugin?  -> https://translate.skinsrestorer.net/
 # Is this file empty below? That means the language was not yet translated.
+skinsrestorer.prefix=&e[&2SkinsRestorer&e]
 skinsrestorer.help_help_command=帮助
 skinsrestorer.help_skin_set=更改您的皮肤。
 skinsrestorer.help_skin_set_other=为目标玩家设置皮肤。
@@ -27,16 +28,16 @@ skinsrestorer.help_sr_createcustom=创建一个服务器范围内的自定义皮
 skinsrestorer.command_server_not_allowed_message={prefix} &4错误&8: &c服务器 {0} 已禁用该命令。
 skinsrestorer.player_has_no_permission_skin={prefix} &4错误&8: &c你没有权限使用该皮肤。
 skinsrestorer.player_has_no_permission_url={prefix} &4错误&8: &c你没有权限通过链接设置皮肤。
-skinsrestorer.skin_disabled={prefix} &4错误&8: &c这个皮肤已被管理员禁用。
-skinsrestorer.skinurl_disallowed={prefix} &4错误&8: &c该域名没有被管理员列入允许名单中。
+skinsrestorer.error_skin_disabled={prefix} &4错误&8: &c这个皮肤已被管理员禁用。
+skinsrestorer.error_skinurl_disallowed={prefix} &4错误&8: &c该域名没有被管理员列入允许名单中。
 skinsrestorer.not_premium={prefix} &4错误&8: &c使用该名称的正版玩家不存在。
 skinsrestorer.invalid_player={prefix} &4错误&8: &c{0} 不是有效的用户名或链接。
 skinsrestorer.skin_cooldown={prefix} &4错误&8: &c你可以在 &e{0} &c秒后再次更换皮肤。
-skinsrestorer.skin_change_success={prefix} &2你的皮肤已改变。
-skinsrestorer.skin_clear_success={prefix} &2你的皮肤已重置。
-skinsrestorer.skin_clear_issuer={prefix} &2已为玩家 {0} 清除皮肤。
+skinsrestorer.success_skin_change={prefix} &2你的皮肤已改变。
+skinsrestorer.success_skin_clear={prefix} &2你的皮肤已重置。
+skinsrestorer.success_skin_clear_other={prefix} &2已为玩家 {0} 清除皮肤。
 skinsrestorer.ms_updating_skin={prefix} &2正在上传皮肤，请稍候... （这可能需要一些时间）
-skinsrestorer.success_create_skin={prefix} &2皮肤 {0} 已创建!
+skinsrestorer.success_admin_createcustom={prefix} &2皮肤 {0} 已创建!
 skinsrestorer.success_updating_skin={prefix} &2你的皮肤已更新。
 skinsrestorer.success_updating_skin_other={prefix} &2已为玩家 {0} 更新皮肤。
 skinsrestorer.error_updating_skin={prefix} &4错误&8: &c在更新你的皮肤数据时出错，请稍后再试!
@@ -55,15 +56,15 @@ skinsrestorer.skinsmenu_previous_page=&e&l«&7 上一页&e&l «
 skinsrestorer.skinsmenu_clear_skin=&c&l[ &7删除皮肤&c&l ]
 skinsrestorer.skinsmenu_select_skin=&2点击选择该皮肤
 skinsrestorer.skin_search_message={prefix} &2您可以在这里找到匹配 &a{0}&2 的皮肤: \n&ahtps://namemc.com/minecraft-skins/tag/{0} \n\n&2如果找不到皮肤，您可以在 https://namemc.com/minecraft-skins/tag 上找到一些皮肤。 \n您可以通过以下命令使用链接设置皮肤：\n /skin https://namemc.com/skin/
-skinsrestorer.admin_set_skin={prefix} &2您设置了 {0} 的皮肤。
-skinsrestorer.data_dropped={prefix} &2为{1}丢弃了{0}数据。
-skinsrestorer.admin_applyskin_succes={prefix} &2玩家皮肤已刷新!
-skinsrestorer.admin_applyskin_error={prefix} &4错误：&c无法刷新玩家皮肤!
+skinsrestorer.success_skin_change_other={prefix} &2您设置了 {0} 的皮肤。
+skinsrestorer.success_admin_drop={prefix} &2为{1}丢弃了{0}数据。
+skinsrestorer.succes_admin_applyskin={prefix} &2玩家皮肤已刷新!
+skinsrestorer.error_admin_applyskin={prefix} &4错误：&c无法刷新玩家皮肤!
 skinsrestorer.status_ok={prefix} &2Mojang API 连接成功!
 skinsrestorer.alt_api_failed={prefix} &4错误&8: &c皮肤数据 API 超负荷，请稍后重试!
-skinsrestorer.ms_api_failed={prefix} &4错误&8: &cMineSkin API 超负荷，请稍后重试!
+skinsrestorer.error_ms_api_failed={prefix} &4错误&8: &cMineSkin API 超负荷，请稍后重试!
 skinsrestorer.no_skin_data={prefix} &4错误&8: &c没有获取到皮肤数据! 确定这个玩家有皮肤吗?
-skinsrestorer.reload={prefix} &7配置文件和语言设置已重新加载!
+skinsrestorer.success_admin_reload={prefix} &7配置文件和语言设置已重新加载!
 skinsrestorer.outdated={prefix} &4你正在运行一个旧版本的 SkinsRestorer!\n&c请到 SpigotMC 更新 SkinsRestorer 至最新版本: \n&ehttps://www.spigotmc.org/resources/skinsrestorer.2124/
 skinsrestorer.custom_help_if_enabled=  &2&lSkinsRestorer &7- &f&lv{0} \n  &7/skin <皮肤名> &7-&f 更改你的皮肤。\n  &7/skin update &7-&f 更新你的皮肤。\n  &7/skin clear &7-&f 清除你的皮肤。
 
