Fix all issues that broke compilation

--- a/shared/src/main/resources/languages/language.properties
+++ b/shared/src/main/resources/languages/language.properties
@@ -24,17 +24,11 @@ skinsrestorer.help_sr_status=Checks plugin needed API services.
 skinsrestorer.help_sr_drop=Removes players or skin data.
 skinsrestorer.help_sr_props=Displays the players current skin properties.
 skinsrestorer.help_sr_apply_skin=Re-apply the skin for target player.
-skinsrestorer.help_sr_createcustom=Create a custom server wide skin.
-skinsrestorer.syntax_defaultcommand=<skin/url>
-skinsrestorer.syntax_skinset=<skin>
-skinsrestorer.syntax_skinset_other=<target> <skin/url>
-skinsrestorer.syntax_skinurl=<skinurl> [classic/slim]
-skinsrestorer.syntax_skinsearch=<search>
-skinsrestorer.syntax_skinupdate_other=<target>
-skinsrestorer.syntax_skinclear_other=<target>
-skinsrestorer.completions_skin=<Skin>
-skinsrestorer.completions_skinname=<SkinName>
-skinsrestorer.completions_skinurl=<SkinUrl>
+skinsrestorer.help_sr_create_custom=Create a custom server wide skin.
+skinsrestorer.help_sr_set_skin_all=Set the skin to every player.
+skinsrestorer.help_sr_apply_skin_all=Re-apply the skin to every player.
+skinsrestorer.help_sr_purge_old_data=Purge old skin data from over x days ago.
+skinsrestorer.help_sr_dump=Upload support data to bytebin.lucko.me.
 skinsrestorer.success_skin_change={prefix} &2Your skin has been changed.
 skinsrestorer.success_skin_change_other={prefix} &2You set {0}'s skin.
 skinsrestorer.success_skin_clear={prefix} &2Your skin has been cleared.
