--- a/shared/src/main/resources/languages/language.properties
+++ b/shared/src/main/resources/languages/language.properties
@@ -60,6 +60,27 @@ skinsrestorer.error_ms_api_failed={prefix} &4Error&8: &cMineSkin API is overload
 skinsrestorer.generic_error={prefix} &4Error&8: &cAn error occurred while requesting skin data, please try again later!
 skinsrestorer.wait_a_minute={prefix} &4Error&8: &cPlease wait a minute before requesting that skin again. (Rate Limited)
 skinsrestorer.error_no_skin={prefix} &4Error&8: &cThis player has no skin set.
+skinsrestorer.permission_command=Allows access to the main "/skin" commands.
+skinsrestorer.permission_command_set=Allows access to change your skin.
+skinsrestorer.permission_command_set.url=Allows access to change your skin by url.
+skinsrestorer.permission_command_clear=Allows access to clear your skin.
+skinsrestorer.permission_command_update=Allows access to update your skin.
+skinsrestorer.permission_command_search=Allows access to search your skin.
+skinsrestorer.permission_command_gui=Allows access to open skins GUI.
+skinsrestorer.permission_admincommand=Allows access to the main "/sr" commands.
+skinsrestorer.permission_command_set.other=Allows access to set a player skin.
+skinsrestorer.permission_command_clear.other=Allows access to clear a player skin.
+skinsrestorer.permission_command_update.other=Allows access to update a player skin.
+skinsrestorer.permission_admincommand_reload=Allows access to /sr reload.
+skinsrestorer.permission_admincommand_status=Allows access to /sr status.
+skinsrestorer.permission_admincommand_drop=Allows access to removes a .SKIN file.
+skinsrestorer.permission_admincommand_props=Allows access to get the skinprops of a player.
+skinsrestorer.permission_admincommand_applyskin=Allows access to re-apply the skin of a player.
+skinsrestorer.permission_admincommand_createcustom=Allows access to create a custom skin by url.
+skinsrestorer.permission_admincommand_dump=Allows access to upload server information via /sr dump.
+skinsrestorer.permission_bypasscooldown=Bypasses any set cooldowns in the config.
+skinsrestorer.permission_bypassdisabled=Allows access to disabled skins in the config.
+skinsrestorer.permission_ownskin=Allows access to set your own skin.
 skinsrestorer.skinsmenu_open={prefix} &2Opening the skins menu...
 skinsrestorer.skinsmenu_title_new=&9Skins Menu - Page {0}
 skinsrestorer.skinsmenu_next_page=&a&l»&7 Next Page&a&l »
