Cleanup some message mistakes

--- a/shared/src/main/resources/languages/language.properties
+++ b/shared/src/main/resources/languages/language.properties
@@ -46,6 +46,7 @@ skinsrestorer.error_skin_disabled={prefix} &4Error&8: &cThis skin is disabled by
 skinsrestorer.error_skinurl_disallowed={prefix} &4Error&8: &cThis domain has not been allowed by the administrator.
 skinsrestorer.not_premium={prefix} &4Error&8: &cPremium player with that name does not exist.
 skinsrestorer.only_allowed_on_console={prefix} &4Error&8: &cOnly console may execute this command!
+skinsrestorer.only_allowed_on_player={prefix} &4Error&8: &cOnly players may execute this command!
 skinsrestorer.invalid_player={prefix} &4Error&8: &c{0} is not a valid username or URL.
 skinsrestorer.skin_cooldown={prefix} &4Error&8: &cYou can change your skin again in &e{0} &cseconds.
 skinsrestorer.ms_updating_skin={prefix} &2Uploading skin, please wait...(This may take up some time)
@@ -62,15 +63,15 @@ skinsrestorer.wait_a_minute={prefix} &4Error&8: &cPlease wait a minute before re
 skinsrestorer.error_no_skin={prefix} &4Error&8: &cThis player has no skin set.
 skinsrestorer.permission_command=Allows access to the main "/skin" commands.
 skinsrestorer.permission_command_set=Allows access to change your skin.
-skinsrestorer.permission_command_set.url=Allows access to change your skin by url.
+skinsrestorer.permission_command_set_url=Allows access to change your skin by url.
 skinsrestorer.permission_command_clear=Allows access to clear your skin.
 skinsrestorer.permission_command_update=Allows access to update your skin.
 skinsrestorer.permission_command_search=Allows access to search your skin.
 skinsrestorer.permission_command_gui=Allows access to open skins GUI.
 skinsrestorer.permission_admincommand=Allows access to the main "/sr" commands.
-skinsrestorer.permission_command_set.other=Allows access to set a player skin.
-skinsrestorer.permission_command_clear.other=Allows access to clear a player skin.
-skinsrestorer.permission_command_update.other=Allows access to update a player skin.
+skinsrestorer.permission_command_set_other=Allows access to set a player skin.
+skinsrestorer.permission_command_clear_other=Allows access to clear a player skin.
+skinsrestorer.permission_command_update_other=Allows access to update a player skin.
 skinsrestorer.permission_admincommand_reload=Allows access to /sr reload.
 skinsrestorer.permission_admincommand_status=Allows access to /sr status.
 skinsrestorer.permission_admincommand_drop=Allows access to removes a .SKIN file.
