--- a/shared/src/main/resources/languages/language.properties
+++ b/shared/src/main/resources/languages/language.properties
@@ -9,7 +9,7 @@
 # For Advanced help go to our Discord -> https://skinsrestorer.net/discord
 # Want to help translate the plugin?  -> https://translate.skinsrestorer.net/
 # Is this file empty below? That means the language was not yet translated.
-skinsrestorer.prefix=&e[&2SkinsRestorer&e]
+skinsrestorer.prefix_format="&e[&2SkinsRestorer&e] {0}"
 skinsrestorer.help_help_command=[help]
 skinsrestorer.help_skin_set=Changes your skin.
 skinsrestorer.help_skin_set_other=Sets the skin for a target player.
@@ -29,38 +29,38 @@ skinsrestorer.help_sr_set_skin_all=Set the skin to every player.
 skinsrestorer.help_sr_apply_skin_all=Re-apply the skin to every player.
 skinsrestorer.help_sr_purge_old_data=Purge old skin data from over x days ago.
 skinsrestorer.help_sr_dump=Upload support data to bytebin.lucko.me.
-skinsrestorer.success_skin_change={prefix} &2Your skin has been changed.
-skinsrestorer.success_skin_change_other={prefix} &2You set {0}'s skin.
-skinsrestorer.success_skin_clear={prefix} &2Your skin has been cleared.
-skinsrestorer.success_skin_clear_other={prefix} &2Skin cleared for player {0}.
-skinsrestorer.success_updating_skin={prefix} &2Your skin has been updated.
-skinsrestorer.success_updating_skin_other={prefix} &2Skin updated for player {0}.
-skinsrestorer.succes_admin_applyskin={prefix} &2Player skin has been refreshed!
-skinsrestorer.success_admin_createcustom={prefix} &2Skin {0} has been created!
-skinsrestorer.success_admin_drop={prefix} &2{0} data dropped for {1}.
-skinsrestorer.success_admin_reload={prefix} &2Config and Locale has been reloaded!
-skinsrestorer.command_server_not_allowed_message={prefix} &4Error&8: &cCommands have been disabled for the server {0}.
-skinsrestorer.player_has_no_permission_skin={prefix} &4Error&8: &cYou don't have permission to set this skin.
-skinsrestorer.player_has_no_permission_url={prefix} &4Error&8: &cYou don't have permission to set skins by URL.
-skinsrestorer.error_skin_disabled={prefix} &4Error&8: &cThis skin is disabled by an administrator.
-skinsrestorer.error_skinurl_disallowed={prefix} &4Error&8: &cThis domain has not been allowed by the administrator.
-skinsrestorer.not_premium={prefix} &4Error&8: &cPremium player with that name does not exist.
-skinsrestorer.only_allowed_on_console={prefix} &4Error&8: &cOnly console may execute this command!
-skinsrestorer.only_allowed_on_player={prefix} &4Error&8: &cOnly players may execute this command!
-skinsrestorer.invalid_player={prefix} &4Error&8: &c{0} is not a valid username or URL.
-skinsrestorer.skin_cooldown={prefix} &4Error&8: &cYou can change your skin again in &e{0} &cseconds.
-skinsrestorer.ms_updating_skin={prefix} &2Uploading skin, please wait...(This may take up some time)
-skinsrestorer.error_updating_skin={prefix} &4Error&8: &cAn error occurred while updating your skin. Please try again later!
-skinsrestorer.error_updating_url={prefix} &4Error&8: &cYou can't update custom url skins! \n&cRequest again using /skin url
-skinsrestorer.error_updating_customskin={prefix} &4Error&8: &cSkin can't be updated because its custom.
-skinsrestorer.error_invalid_urlskin={prefix} &4Error&8: &cInvalid skin url or format, \n&cTry uploading your skin to imgur and right click 'copy image address' \n&cFor guide see: &c&oskinsrestorer.net/skinurl
-skinsrestorer.error_admin_applyskin={prefix} &4ERROR&8: &cplayer skin could NOT be refreshed!
-skinsrestorer.error_ms_full={prefix} &4MS Error&8: &cAPI timed out while uploading your &cskin. Please try again later. (MineSkin)
-skinsrestorer.error_ms_generic={prefix} &4MS Error&8: {0}
-skinsrestorer.error_ms_api_failed={prefix} &4Error&8: &cMineSkin API is overloaded, please try again later!
-skinsrestorer.generic_error={prefix} &4Error&8: &cAn error occurred while requesting skin data, please try again later!
-skinsrestorer.wait_a_minute={prefix} &4Error&8: &cPlease wait a minute before requesting that skin again. (Rate Limited)
-skinsrestorer.error_no_skin={prefix} &4Error&8: &cThis player has no skin set.
+skinsrestorer.success_skin_change=&2Your skin has been changed.
+skinsrestorer.success_skin_change_other=&2You set {0}'s skin.
+skinsrestorer.success_skin_clear=&2Your skin has been cleared.
+skinsrestorer.success_skin_clear_other=&2Skin cleared for player {0}.
+skinsrestorer.success_updating_skin=&2Your skin has been updated.
+skinsrestorer.success_updating_skin_other=&2Skin updated for player {0}.
+skinsrestorer.success_admin_applyskin=&2Player skin has been refreshed!
+skinsrestorer.success_admin_createcustom=&2Skin {0} has been created!
+skinsrestorer.success_admin_drop=&2{0} data dropped for {1}.
+skinsrestorer.success_admin_reload=&2Config and Locale has been reloaded!
+skinsrestorer.error_skin_disabled=&4Error&8: &cThis skin is disabled by an administrator.
+skinsrestorer.error_skinurl_disallowed=&4Error&8: &cThis domain has not been allowed by the administrator.
+skinsrestorer.error_updating_skin=&4Error&8: &cAn error occurred while updating your skin. Please try again later!
+skinsrestorer.error_updating_url=&4Error&8: &cYou can't update custom url skins! \n&cRequest again using /skin url
+skinsrestorer.error_updating_customskin=&4Error&8: &cSkin can't be updated because its custom.
+skinsrestorer.error_invalid_urlskin=&4Error&8: &cInvalid skin url or format, \n&cTry uploading your skin to imgur and right click 'copy image address' \n&cFor guide see: &c&oskinsrestorer.net/skinurl
+skinsrestorer.error_admin_applyskin=&4ERROR&8: &cplayer skin could NOT be refreshed!
+skinsrestorer.error_ms_full=&4MS Error&8: &cAPI timed out while uploading your &cskin. Please try again later. (MineSkin)
+skinsrestorer.error_ms_generic=&4MS Error&8: {0}
+skinsrestorer.error_ms_api_failed=&4Error&8: &cMineSkin API is overloaded, please try again later!
+skinsrestorer.error_no_skin=&4Error&8: &cThis player has no skin set.
+skinsrestorer.command_server_not_allowed_message=&4Error&8: &cCommands have been disabled for the server {0}.
+skinsrestorer.player_has_no_permission_skin=&4Error&8: &cYou don't have permission to set this skin.
+skinsrestorer.player_has_no_permission_url=&4Error&8: &cYou don't have permission to set skins by URL.
+skinsrestorer.not_premium=&4Error&8: &cPremium player with that name does not exist.
+skinsrestorer.only_allowed_on_console=&4Error&8: &cOnly console may execute this command!
+skinsrestorer.only_allowed_on_player=&4Error&8: &cOnly players may execute this command!
+skinsrestorer.invalid_player=&4Error&8: &c{0} is not a valid username or URL.
+skinsrestorer.skin_cooldown=&4Error&8: &cYou can change your skin again in &e{0} &cseconds.
+skinsrestorer.ms_updating_skin=&2Uploading skin, please wait...(This may take up some time)
+skinsrestorer.generic_error=&4Error&8: &cAn error occurred while requesting skin data, please try again later!
+skinsrestorer.wait_a_minute=&4Error&8: &cPlease wait a minute before requesting that skin again. (Rate Limited)
 skinsrestorer.permission_command=Allows access to the main "/skin" commands.
 skinsrestorer.permission_command_set=Allows access to change your skin.
 skinsrestorer.permission_command_set_url=Allows access to change your skin by url.
@@ -82,17 +82,17 @@ skinsrestorer.permission_admincommand_dump=Allows access to upload server inform
 skinsrestorer.permission_bypasscooldown=Bypasses any set cooldowns in the config.
 skinsrestorer.permission_bypassdisabled=Allows access to disabled skins in the config.
 skinsrestorer.permission_ownskin=Allows access to set your own skin.
-skinsrestorer.skinsmenu_open={prefix} &2Opening the skins menu...
+skinsrestorer.skinsmenu_open=&2Opening the skins menu...
 skinsrestorer.skinsmenu_title_new=&9Skins Menu - Page {0}
 skinsrestorer.skinsmenu_next_page=&a&l»&7 Next Page&a&l »
 skinsrestorer.skinsmenu_previous_page=&e&l«&7 Previous Page&e&l «
 skinsrestorer.skinsmenu_clear_skin=&c&l[ &7Remove Skin&c&l ]
 skinsrestorer.skinsmenu_select_skin=&2Click to select this skin
-skinsrestorer.skin_search_message={prefix} &2You can find skins matching &a{0}&2 here: \n&ahttps://namemc.com/minecraft-skins/tag/{0} \n\n&2If no skins are found, you can always find some skins at https://namemc.com/minecraft-skins/tag \nYou can set the skin using the skin link:\n /skin https://namemc.com/skin/
-skinsrestorer.status_ok={prefix} &2Mojang API connection successful!
-skinsrestorer.alt_api_failed={prefix} &4Error&8: &cSkin Data API is overloaded, please try again later!
-skinsrestorer.no_skin_data={prefix} &4Error&8: &cNo skin data acquired! Does this player have a skin?
-skinsrestorer.outdated={prefix} &4You are running an outdated version of SkinsRestorer!\n&cPlease update to the latest version on Spigot: \n&ehttps://www.spigotmc.org/resources/skinsrestorer.2124/
+skinsrestorer.skin_search_message=&2You can find skins matching &a{0}&2 here: \n&ahttps://namemc.com/minecraft-skins/tag/{0} \n\n&2If no skins are found, you can always find some skins at https://namemc.com/minecraft-skins/tag \nYou can set the skin using the skin link:\n /skin https://namemc.com/skin/
+skinsrestorer.status_ok=&2Mojang API connection successful!
+skinsrestorer.alt_api_failed=&4Error&8: &cSkin Data API is overloaded, please try again later!
+skinsrestorer.no_skin_data=&4Error&8: &cNo skin data acquired! Does this player have a skin?
+skinsrestorer.outdated=&4You are running an outdated version of SkinsRestorer!\n&cPlease update to the latest version on Spigot: \n&ehttps://www.spigotmc.org/resources/skinsrestorer.2124/
 skinsrestorer.sr_line=&7&m----------------------------------------
 skinsrestorer.custom_help_if_enabled=  &2&lSkinsRestorer &7- &f&lv{0} \
             \n    &2/skin <skinname> &7-&f Changes your skin. \
