Add public visibility to the default commands

--- a/shared/src/main/resources/languages/language.properties
+++ b/shared/src/main/resources/languages/language.properties
@@ -9,7 +9,7 @@
 # For Advanced help go to our Discord -> https://skinsrestorer.net/discord
 # Want to help translate the plugin?  -> https://translate.skinsrestorer.net/
 # Is this file empty below? That means the language was not yet translated.
-skinsrestorer.prefix_format="&e[&2SkinsRestorer&e] {0}"
+skinsrestorer.prefix_format=&e[&2SkinsRestorer&e] {0}
 skinsrestorer.help_help_command=[help]
 skinsrestorer.help_skin_set=Changes your skin.
 skinsrestorer.help_skin_set_other=Sets the skin for a target player.
