--- a/shared/src/main/resources/languages/language.properties
+++ b/shared/src/main/resources/languages/language.properties
@@ -10,7 +10,9 @@
 # Want to help translate the plugin?  -> https://translate.skinsrestorer.net/
 # Is this file empty below? That means the language was not yet translated.
 skinsrestorer.prefix_format=&e[&2SkinsRestorer&e] {0}
-skinsrestorer.help_help_command=[help]
+skinsrestorer.help_skin=Main command.
+skinsrestorer.help_skins=Opens skins GUI.
+skinsrestorer.help_sr=Admin commands.
 skinsrestorer.help_skin_set=Changes your skin.
 skinsrestorer.help_skin_set_other=Sets the skin for a target player.
 skinsrestorer.help_skin_set_other_url=Sets the skin from an url for a target player.
