Fix ambigous collide and send syntax messages

--- a/shared/src/main/resources/languages/language.properties
+++ b/shared/src/main/resources/languages/language.properties
@@ -80,6 +80,8 @@ skinsrestorer.permission_admincommand_drop=Allows access to removes a .SKIN file
 skinsrestorer.permission_admincommand_props=Allows access to get the skinprops of a player.
 skinsrestorer.permission_admincommand_applyskin=Allows access to re-apply the skin of a player.
 skinsrestorer.permission_admincommand_createcustom=Allows access to create a custom skin by url.
+skinsrestorer.permission_admincommand_applyskinall=Allows access to apply a skin to all players.
+skinsrestorer.permission_admincommand_purgeolddata=Allows access to purge old skin data.
 skinsrestorer.permission_admincommand_dump=Allows access to upload server information via /sr dump.
 skinsrestorer.permission_bypasscooldown=Bypasses any set cooldowns in the config.
 skinsrestorer.permission_bypassdisabled=Allows access to disabled skins in the config.
