--- a/shared/src/main/resources/languages/language.properties
+++ b/shared/src/main/resources/languages/language.properties
@@ -63,6 +63,7 @@ skinsrestorer.skin_cooldown=&4Error&8: &cYou can change your skin again in &e{0}
 skinsrestorer.ms_updating_skin=&2Uploading skin, please wait...(This may take up some time)
 skinsrestorer.generic_error=&4Error&8: &cAn error occurred while requesting skin data, please try again later!
 skinsrestorer.wait_a_minute=&4Error&8: &cPlease wait a minute before requesting that skin again. (Rate Limited)
+skinsrestorer.permission_player_wildcard=Wildcard permission for players
 skinsrestorer.permission_command=Allows access to the main "/skin" commands.
 skinsrestorer.permission_command_set=Allows access to change your skin.
 skinsrestorer.permission_command_set_url=Allows access to change your skin by url.
@@ -70,6 +71,7 @@ skinsrestorer.permission_command_clear=Allows access to clear your skin.
 skinsrestorer.permission_command_update=Allows access to update your skin.
 skinsrestorer.permission_command_search=Allows access to search your skin.
 skinsrestorer.permission_command_gui=Allows access to open skins GUI.
+skinsrestorer.permission_admin_wildcard=Wildcard permission for admins
 skinsrestorer.permission_admincommand=Allows access to the main "/sr" commands.
 skinsrestorer.permission_command_set_other=Allows access to set a player skin.
 skinsrestorer.permission_command_clear_other=Allows access to clear a player skin.
